Address code review findings: OWASP CI gate, CEEDAYS parity, PII logging, legacy read-only, zero-warning build, a11y, zero skipped tests
Resolves all 10 findings from the FINAL completion-verification review
(4 MAJOR, 4 MINOR, 2 INFO):

MAJOR
- ci.yml/pom.xml: wire NVD_API_KEY secret + NVD database cache into the
  OWASP dependency-check gate and reconcile the POM/README CI-contract
  comments, so the zero critical/high CVE gate is genuinely runnable in CI
  (no longer reliant on -Ddependency-check.skip).
- DateValidationService: faithful IBM LE CEEDAYS feedback emulation -
  pre-Lilian-epoch dates -> severity 0003 / message 2513 (tolerated),
  proleptic year 0 -> 2521 (not tolerated); revives the previously dead
  tolerance branch in the TranAdd/Report callers. Severity halfword
  corrected 0012 -> 0003 to match the COBOL feedback tokens.
- DailyTransactionPostService: mask PAN to last-4 and guard card/account/
  customer identifiers behind DEBUG so no PII/PAN is logged at INFO.
- legacy read-only governance: add .github/CODEOWNERS for /legacy plus a
  legacy-readonly CI guard job that fails the build on any change under
  legacy/.

MINOR / INFO
- .mvn/wrapper 3.9.9 -> 3.9.11; add .mvn/jvm.config and a Surefire
  Mockito-agent argLine (@{argLine} late-bound to JaCoCo) with -Xshare:off
  => zero JVM/runtime warnings on Java 25 across the full suite (javac was
  already -Werror/-Xlint clean).
- layout.html shared messages fragment: role="alert" / role="status" so
  validation and abend messages are announced to assistive technology on
  every screen that includes the fragment.
- transaction-list.html: add a visually-hidden <caption> describing the
  list, row selection, and PF7/PF8 paging.
- layout.html: overflow-x:auto for narrow viewports while preserving the
  fixed 80ch (24x80 BMS) terminal geometry.
- Writer golden tests (Reject/Statement/Html): replace fixture-absent
  assumeTrue skips with deterministic round-trip byte-for-byte parity tests
  against the canon